overflow mobile bugfix

--- a/frontend/sass/base/_base.scss
+++ b/frontend/sass/base/_base.scss
@@ -12,5 +12,8 @@ html {
 
 body {
    box-sizing: border-box;
+}
+
+.overflow-wrapper {
    overflow-x: hidden;
 }
